--- a/index.html
+++ b/index.html
@@ -5,24 +5,32 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css">
+	<link href="https://fonts.googleapis.com/css?family=Patrick+Hand+SC|Permanent+Marker" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
 <body>
+	<div class="container-fluid buttons">
 	<div class="container">
 		<div class="row">
 			<div class="col-12" id="selections">
 			</div>
 		</div>
+	</div>	
+	</div>	
+	<div class="container">	
 		<div class="row main">
 			<div class="col-xs-12 col-md-8" id="gifs">
 			</div>
 			<div class="col-xs-12 col-md-4 form-group" id="search">
 				<label class="form-control-label" for="formGroupExampleInput">Add a Villain:</label>
-				<input type="text" class="form-control" id="input" placeholder="John Doe">
+				<input type="text" class="form-control" id="input" placeholder="Bad Guy">
 				<input type="submit" value="Create Button" class="btn btn-primary" id="createButton"></input>
 			</div>
 		</div>
-	</div>	
+	</div>
+	<nav class="navbar fixed-bottom navbar-light bg-light">
+		<img id='giphy' src="assets/images/Poweredby_100px_Badge.gif" alt='giphy'>
+	</nav>
 	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js"></script>
